--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 </h1>  
  
 
-<div class="container-fluid  fs-4 d-flex justify-content-between mt-4">
+<div class="container-fluid  fs-4 d-flex justify-content-between flex-wrap-wrap mt-4">
    
   <div>
   <i class="fa-brands fa-instagram"></i><span>wild_beans_cafe</span>
@@ -266,16 +266,6 @@
 
 </div>
 
-
-
-      
-
-
-
-
-
-
-
 </footer>
 
 
@@ -287,4 +277,5 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </body>
+
 </html>
