--- a/index.html
+++ b/index.html
@@ -247,15 +247,15 @@
 
 <div class="container-fluid  fs-4 d-flex justify-content-between flex-wrap-wrap mt-4">
    
-  <div>
+  <div class="container-fluid">
   <i class="fa-brands fa-instagram"></i><span>wild_beans_cafe</span>
   </div>
   
-  <div>
+ <div class="container-fluid">
   <i class="fa-brands fa-facebook"></i> <span>wild_beans_cafe_page</span>
   </div> 
 
-   <div>
+   <div class="container-fluid">
    <i class="fa-brands fa-x-twitter"></i><span>wild-beans_cafe</span>
    </div>
 
@@ -274,4 +274,5 @@
 </body>
 
 </html>
+
 
