--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section class="container-fluid" id="about">
 
   
-  <img src="about img.jpg" alt="" class="img-fluid" style="height: 500px;">
+  <img src="about img.jpg" alt="" class="img-fluid" >
  
 
   <div id="about_info" class="container-fluid"> 
@@ -274,5 +274,6 @@
 </body>
 
 </html>
+
 
 
